--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1281,6 +1281,9 @@
     <ClInclude Include="..\public\utility\sigcache.h">
       <Filter>sdk\public\utility</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\utility\vtable.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1614,6 +1617,9 @@
       <Filter>thirdparty\protobuf</Filter>
     </ClCompile>
     <ClCompile Include="..\public\utility\sigcache.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\vtable.cpp">
       <Filter>sdk\public\utility</Filter>
     </ClCompile>
   </ItemGroup>
