--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -263,6 +263,7 @@
     <ClInclude Include="..\materialsystem\cshaderglue.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\almostequal.cpp" />
+    <ClInclude Include="..\mathlib\compressed_vector.h" />
     <ClInclude Include="..\mathlib\fbits.h" />
     <ClInclude Include="..\mathlib\color.h" />
     <ClInclude Include="..\mathlib\crc32.h" />
