Initial refactor of the CCrashHandler class
* Fixed recursive call.
* Format file similarly to Respawn's.
* Reduced output code size.

TODO:
* Call crashmsg.exe.
* Add build and system information.

--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -243,6 +243,7 @@
     <ClInclude Include="..\public\server_class.h" />
     <ClInclude Include="..\public\studio.h" />
     <ClInclude Include="..\public\utility\binstream.h" />
+    <ClInclude Include="..\public\utility\crashhandler.h" />
     <ClInclude Include="..\public\utility\httplib.h" />
     <ClInclude Include="..\public\utility\memaddr.h" />
     <ClInclude Include="..\public\utility\module.h" />
