--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="..\inputsystem\inputsystem.cpp" />
     <ClCompile Include="..\launcher\IApplication.cpp" />
     <ClCompile Include="..\launcher\launcher.cpp" />
+    <ClCompile Include="..\localize\localize.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialglue.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
     <ClCompile Include="..\materialsystem\cshaderglue.cpp" />
@@ -259,6 +260,7 @@
     <ClInclude Include="..\inputsystem\inputsystem.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
     <ClInclude Include="..\launcher\launcher.h" />
+    <ClInclude Include="..\localize\localize.h" />
     <ClInclude Include="..\materialsystem\cmaterialglue.h" />
     <ClInclude Include="..\materialsystem\cmaterialsystem.h" />
     <ClInclude Include="..\materialsystem\cshaderglue.h" />
