--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -660,6 +660,9 @@
     <ClCompile Include="..\pluginsystem\modsystem.cpp">
       <Filter>sdk\pluginsystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\vpc\rson.cpp">
+      <Filter>sdk\vpc</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1894,6 +1897,9 @@
     </ClInclude>
     <ClInclude Include="..\pluginsystem\modsystem.h">
       <Filter>sdk\pluginsystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vpc\rson.h">
+      <Filter>sdk\vpc</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
