--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -182,7 +182,9 @@
     <ClInclude Include="..\game\server\detour_impl.h" />
     <ClInclude Include="..\game\server\fairfight_impl.h" />
     <ClInclude Include="..\game\server\gameinterface.h" />
+    <ClInclude Include="..\game\server\networkproperty.h" />
     <ClInclude Include="..\game\shared\animation.h" />
+    <ClInclude Include="..\game\shared\collisionproperty.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
     <ClInclude Include="..\launcher\launcher.h" />
     <ClInclude Include="..\launcher\prx.h" />
@@ -218,10 +220,13 @@
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sig_map.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
+    <ClInclude Include="..\public\baseentity.h" />
+    <ClInclude Include="..\public\basehandle.h" />
     <ClInclude Include="..\public\datamap.h" />
     <ClInclude Include="..\public\dt_common.h" />
     <ClInclude Include="..\public\dt_send.h" />
     <ClInclude Include="..\public\eiface.h" />
+    <ClInclude Include="..\public\engine\ICollideable.h" />
     <ClInclude Include="..\public\iengine.h" />
     <ClInclude Include="..\public\client_class.h" />
     <ClInclude Include="..\public\const.h" />
@@ -239,11 +244,15 @@
     <ClInclude Include="..\public\inetmsghandler.h" />
     <ClInclude Include="..\public\ipackedstore.h" />
     <ClInclude Include="..\public\iserver.h" />
+    <ClInclude Include="..\public\iserverentity.h" />
+    <ClInclude Include="..\public\iservernetworkable.h" />
+    <ClInclude Include="..\public\iserverunknown.h" />
     <ClInclude Include="..\public\isnapshotmgr.h" />
     <ClInclude Include="..\public\ivscript.h" />
     <ClInclude Include="..\public\model_types.h" />
     <ClInclude Include="..\public\networkvar.h" />
     <ClInclude Include="..\public\server_class.h" />
+    <ClInclude Include="..\public\string_t.h" />
     <ClInclude Include="..\public\studio.h" />
     <ClInclude Include="..\public\utility\binstream.h" />
     <ClInclude Include="..\public\utility\crashhandler.h" />
@@ -529,7 +538,9 @@
     <ClCompile Include="..\game\server\ai_networkmanager.cpp" />
     <ClCompile Include="..\game\server\ai_utility.cpp" />
     <ClCompile Include="..\game\server\gameinterface.cpp" />
+    <ClCompile Include="..\game\server\networkproperty.cpp" />
     <ClCompile Include="..\game\shared\animation.cpp" />
+    <ClCompile Include="..\game\shared\collisionproperty.cpp" />
     <ClCompile Include="..\launcher\IApplication.cpp" />
     <ClCompile Include="..\launcher\launcher.cpp" />
     <ClCompile Include="..\launcher\prx.cpp" />
