--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -190,7 +190,9 @@
     <ClInclude Include="..\game\server\playerlocaldata.h" />
     <ClInclude Include="..\game\shared\animation.h" />
     <ClInclude Include="..\game\shared\collisionproperty.h" />
+    <ClInclude Include="..\game\shared\ehandle.h" />
     <ClInclude Include="..\game\shared\playernet_vars.h" />
+    <ClInclude Include="..\game\shared\predictioncopy.h" />
     <ClInclude Include="..\game\shared\shared_classnames.h" />
     <ClInclude Include="..\game\shared\takedamageinfo.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
